network.yaml
# network.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: toy-workshop-network
spec:
  podSelector:
    matchLabels:
      app: flask-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: postgres
